Check button added in

--- a/src/app/input-grid/input-grid.component.html
+++ b/src/app/input-grid/input-grid.component.html
@@ -39,7 +39,7 @@
     <div class="button-group">
         <button (click)="onClear()">Clear board</button>
         <button (click)="onSolve()">Solve board</button>
-        <!-- <button (click)="onCheck()">Check board</button> -->
+        <button (click)="onCheck()">Check board</button>
     </div>
 
 </div>
